# aider

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
crates/aider/: Cargo.toml
crates/aider/src/: lib.rs  main.rs
crates/aider/src/agent/: openai.rs
crates/aider/src/channel/: event_channel.rs
crates/aider/src/event/: message_stream_event.rs  mod.rs
crates/aider/src/state/: chat_session.rs
crates/aider/src/ui/: app.rs  chat_history.rs  chat_input.rs  component.rs  header.rs  mod.rs
docs/: redraw_ui_on_demand.md
