[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.4"
authors = ["Dat Vo <vo9312@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/exajoy/aider"
repository = "https://github.com/exajoy/aider"

[workspace.dependencies]

reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
